[package]
name = "tit-bbbler"
version = "0.8.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
font-kit = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
async-imap = { version = "0.11.1", default-features = false, features = ["runtime-tokio"] }
mailparse = "0.16.1"
rustls = "0.23.36"
chrono = "0.4.43"
webpki-roots = "1.0.5"
tokio = "1.49.0"
tokio-rustls = "0.26.4"
futures = "0.3.31"
